--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,10 @@ body{
 .navbar .navbar-brand {
     color: #555;
     padding-left: 0;
-    padding-right: 50px;
+    padding-right: 10px;
     font-family: 'Merienda One', sans-serif;
+    font-style: italic;
+    font-weight: bold;
 }
 .navbar .navbar-brand i {
     font-size: 20px;
@@ -341,7 +343,7 @@ body {
         }
     
         .login-form{
-            margin-top: 80%;
+            /* margin-top: 80%; */
         }
     
         .register-form{
@@ -423,8 +425,12 @@ body {
     /* Styles for wrapping the search box */
 
 .main {
-    width: 50%;
+    width: 60%;
     margin: 50px auto;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
 }
 
 /* Bootstrap 4 text input with search icon */
